# generatesql

./: CMakeLists.txt  README.md  generate_sql.cpp  generate_sql.h
resource/: test.txt  write.txt
